# Structure-from-Motion

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/sfm/: bundle_adjustment.hpp  sfm.hpp  utils.hpp
src/: dense_mapping_node.cpp  sfm_node.cpp  train_vocab.cpp
